--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
+		"dotenv": "^9.0.0",
 		"express": "^4.17.1"
 	},
 	"devDependencies": {
