--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
 		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
 		"dotenv": "^9.0.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"mongoose": "^5.12.7",
+		"mongoose-paginate": "^5.0.3"
 	},
 	"devDependencies": {
 		"eslint": "^7.26.0",
