--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "cross-env NODE_ENV=production node src/server.js",
-		"dev": "cross-env NODE_ENV=development nodemon src/server.js"
+		"dev": "npm run lint && cross-env NODE_ENV=development nodemon src/server.js",
+		"test": "npm run lint && jest __tests__/test.spec.js",
+		"lint": "eslint ."
 	},
 	"repository": {
 		"type": "git",
@@ -25,16 +27,22 @@
 	},
 	"homepage": "https://github.com/samuelnovaes/ilia-challenge#readme",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
 		"dotenv": "^9.0.0",
 		"express": "^4.17.1",
+		"joi": "^17.4.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.12.7",
 		"mongoose-paginate": "^5.0.3"
 	},
 	"devDependencies": {
 		"eslint": "^7.26.0",
-		"nodemon": "^2.0.7"
+		"eslint-plugin-jest": "^24.3.6",
+		"jest": "^26.6.3",
+		"nodemon": "^2.0.7",
+		"supertest": "^6.1.3"
 	}
 }
