--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
 		"express": "^4.17.1",
 		"joi": "^17.4.0",
 		"jsonwebtoken": "^8.5.1",
+		"kafkajs": "^1.15.0",
 		"mongoose": "^5.12.7",
-		"mongoose-paginate": "^5.0.3"
+		"mongoose-paginate": "^5.0.3",
+		"nanoid": "^3.1.22"
 	},
 	"devDependencies": {
 		"eslint": "^7.26.0",
